# vox-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  config.py  pyproject.toml  server.json  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml
conf/: __init__.py  custom_models.json  gemini_models.json  openai_models.json  openrouter_models.json  xai_models.json
providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  moonshot.py  openai.py  openai_compatible.py  openrouter.py  registry.py  xai.py
providers/registries/: base.py  (+1 more)
tests/: __init__.py  conftest.py  test_auto_mode.py  test_auto_mode_provider_selection.py  test_chat_cross_model_continuation.py  test_chat_simple.py  test_concurrency_event_loop.py  test_config.py  test_config_integrity.py  test_conversation_file_features.py  test_conversation_memory.py  test_custom_provider.py  test_file_protection.py  test_gemini_interactions.py  test_home_isolation.py  test_listmodels.py  test_model_enumeration.py  test_model_restrictions.py  test_openrouter_provider.py  test_providers.py  test_sampling_params.py  test_server.py  test_temperature_passthrough.py  test_thinking_constraint.py  test_thread_persistence.py  test_xai_provider.py
tools/: __init__.py  chat.py  dump_threads.py  listmodels.py  models.py
utils/: __init__.py  client_info.py  conversation_memory.py  env.py  file_types.py  file_utils.py  markdown_export.py  model_restrictions.py  security_config.py  storage_backend.py  thread_persistence.py
(+15 files in other folders)
