[project]
name = "vox-mcp"
version = "0.1.0"
description = "Multi-model AI gateway for MCP clients — routes prompts to Gemini, OpenAI, Anthropic, xAI, DeepSeek, Moonshot, OpenRouter, and local models with conversation memory"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Xule Lin" }]
urls = { Homepage = "https://github.com/linxule/vox-mcp", Repository = "https://github.com/linxule/vox-mcp" }
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.19.0",
    "openai>=1.55.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.54.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "providers*", "utils*", "conf*"]

[tool.setuptools]
py-modules = ["server", "config"]

[tool.setuptools.package-data]
"*" = ["conf/*.json"]

[project.scripts]
vox-mcp = "server:run"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
"tests/conftest.py" = ["E402"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
